--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -24,3 +24,14 @@
 	year = {1980},
 	file = {Library Catalog Entry Snapshot:/home/daniel/Literatur/storage/5ZTGA7S3/PPNSET.html:text/html}
 }
+
+@article{rihll_modelling_1988,
+	title = {Modelling {Settlement} {Structures}},
+	volume = {516},
+	url = {https://www.geog.leeds.ac.uk/fileadmin/documents/research/csap/working_papers_new/1988-516.pdf},
+	urldate = {2017-05-04},
+	journal = {Working Paper, University Leeds},
+	author = {Rihll, T. E. and Wilson, A. G.},
+	year = {1988},
+	file = {1988-516.pdf:/home/daniel/Literatur/storage/RAMJD2QX/1988-516.html:text/html;Rihll_Wilson_1988_Modelling Settlement Structures.pdf:/home/daniel/Literatur/Literature_in_alphabetic_order/R/Rihll_Wilson_1988_Modelling Settlement Structures.pdf:application/pdf}
+}
